--- a/css/select.css
+++ b/css/select.css
@@ -1,61 +1,66 @@
 /* Reset Select */
 select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  appearance: none;
-  outline: 0;
-  box-shadow: none;
-  border: 0 !important;
-  background: #2c3e50;
-  background-image: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	-ms-appearance: none;
+	appearance: none;
+	outline: 0;
+	-webkit-box-shadow: none;
+	        box-shadow: none;
+	border: 0 !important;
+	background: #2c3e50;
+	background-image: none;
 }
 
 /* Remove IE arrow */
 select::-ms-expand {
-  display: none;
+	display: none;
 }
 
 /* Prevent Blue Highlight IE */
 select::-ms-value {
-  background: none;
+	background: none;
 }
 
 /* Custom Select */
 .select {
-  position: relative;
-  display: flex;
-  width: 100%;
-  height: 3.5em;
-  line-height: 3.5;
-  background: #2c3e50;
-  overflow: hidden;
-  border-radius: .25em;
+	position: relative;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	width: 100%;
+	height: 3.5em;
+	line-height: 3.5;
+	background: #2c3e50;
+	overflow: hidden;
+	border-radius: .25em;
 }
 
 select {
-  flex: 1;
-  padding: 0 .5em;
-  color: #fff;
-  cursor: pointer;
+	-webkit-box-flex: 1;
+	    -ms-flex: 1;
+	        flex: 1;
+	padding: 0 .5em;
+	color: #fff;
+	cursor: pointer;
 }
 
 /* Arrow */
 .select::after {
-  content: '\25BC';
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 0 1em;
-  background: rgb(223, 35, 89);
-  cursor: pointer;
-  pointer-events: none;
-  -webkit-transition: .25s all ease;
-  -o-transition: .25s all ease;
-  transition: .25s all ease;
+	content: '\25BC';
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding: 0 1em;
+	background: rgb(223, 35, 89);
+	cursor: pointer;
+	pointer-events: none;
+	-webkit-transition: .25s all ease;
+	-o-transition: .25s all ease;
+	transition: .25s all ease;
 }
 
 /* Transition */
 .select:hover::after {
-  color: white;
+	color: white;
 }
