--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,7 @@
-html {
-	height: 100%;
-}
-
 body {
 	padding: 0;
 	margin: 0;
-	width: 100%;
+	width: 100vh;
 	height: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
