--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 body {
 	padding: 0;
 	margin: 0;
-	width: 100vh;
-	height: 100%;
+	width: 100%;
+	height: 100vh;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: local;
