--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,12 @@
+html {
+	height: 100vh;
+}
+
 body {
 	padding: 0;
 	margin: 0;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: local;
