--- a/css/loading.css
+++ b/css/loading.css
@@ -1,3 +1,23 @@
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#loading {
+  z-index: 9999;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgb(249, 249, 250);
+}
+
 @-webkit-keyframes delayedSpinner {
   0% {
     -webkit-transform:rotate(0deg);
