--- a/css/select.css
+++ b/css/select.css
@@ -55,9 +55,9 @@ select {
 	background: rgb(223, 35, 89);
 	cursor: pointer;
 	pointer-events: none;
-	-webkit-transition: .25s all ease;
-	-o-transition: .25s all ease;
-	transition: .25s all ease;
+	-webkit-transition: .25s color ease;
+	-o-transition: .25s color ease;
+	transition: .25s color ease;
 }
 
 /* Transition */
