--- a/css/checkmark_radio.css
+++ b/css/checkmark_radio.css
@@ -83,3 +83,8 @@
 .wrapper > input:checked + label::after {
 	opacity: 1;
 }
+
+label.focused::before {
+    box-shadow: 0 0 0 3px #ffbf47;
+    outline: 3px solid transparent; /* For Windows high contrast mode. */
+}
