--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,17 @@ body {
 	font-weight: 400;
 }
 
+#doc-wrapper {
+	position: absolute;
+	top: 0;
+	left: 0;
+	border: 0;
+	background: rgb(249, 249, 250);
+	width: 100%;
+	height: 100%;
+	display: block;
+}
+
 .frosted-panel {
 	-webkit-box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
 	        box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
