--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,13 @@
 html {
-	position: absolute;
-	top: 0;
-	left: 0;
-	border: 0;
-	background: rgb(249, 249, 250);
 	width: 100%;
 	height: 100%;
-	display: block;
 }
 
 body {
 	padding: 0;
 	margin: 0;
-	width: 100%;
-	height: 100%;
+	min-width: 100%;
+	min-width: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: local;
