--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,13 @@
 html {
-	width: 100%;
-	height: 100%;
+	width: min-width: 100%;
+	height: min-height: 100%;
 }
 
 body {
 	padding: 0;
 	margin: 0;
-	min-width: 100%;
-	min-width: 100%;
+	width: 100%;
+	height: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: local;
