--- a/css/main.css
+++ b/css/main.css
@@ -6,21 +6,12 @@ html {
 body {
 	padding: 0;
 	margin: 0;
-	width: min-width: 100%;
-	height: min-height: 100%;
+	width: 100%;
+	height: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: local;
 	background-size: cover;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
 	/* Survey Form Styles */
 	font-size: 10px;
 
