--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,15 @@ body {
 	background-repeat: no-repeat;
 	background-attachment: local;
 	background-size: cover;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	/* Survey Form Styles */
 	font-size: 10px;
 
